--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gsap": "^3.12.5",
     "inquirer": "^9.2.21"
   },
   "devDependencies": {
